--- a/src/Slark/Server/Slark.Server.Core/Slark.Server.Core.csproj
+++ b/src/Slark/Server/Slark.Server.Core/Slark.Server.Core.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>Slark.Server.Core</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+  </ItemGroup>
+
 </Project>
