--- a/src/Slark/Slark.Server.ConsoleApp.NETCore/Slark.Server.ConsoleApp.NETCore.csproj
+++ b/src/Slark/Slark.Server.ConsoleApp.NETCore/Slark.Server.ConsoleApp.NETCore.csproj
@@ -15,6 +15,7 @@
     <ProjectReference Include="..\Slark.Core\Slark.Core.csproj" />
     <ProjectReference Include="..\Slark.Server.ProtocolAdapter.LeanCloudPlay\Slark.Server.LeanCloud.Play.csproj" />
     <ProjectReference Include="..\Slark.Server.WebSoket\Slark.Server.WebSoket.csproj" />
+    <ProjectReference Include="..\Slark.Server.LiveBroadcast\Slark.Server.LiveBroadcast.csproj" />
   </ItemGroup>
 
 </Project>
