feat: docker run.

--- a/src/Slark/Slark.Server.ConsoleApp.NETCore/Slark.Server.ConsoleApp.NETCore.csproj
+++ b/src/Slark/Slark.Server.ConsoleApp.NETCore/Slark.Server.ConsoleApp.NETCore.csproj
@@ -18,4 +18,7 @@
     <ProjectReference Include="..\Slark.Server.LiveBroadcast\Slark.Server.LiveBroadcast.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Dockerfile.txt" />
+  </ItemGroup>
 </Project>
