feat: create room ojbk.

--- a/src/Slark/Slark.Core/Slark.Core.csproj
+++ b/src/Slark/Slark.Core/Slark.Core.csproj
@@ -13,6 +13,7 @@
     <Folder Include="Utils\Http\" />
     <Folder Include="Utils\Polling\" />
     <Folder Include="Utils\Protocol\" />
+    <Folder Include="Utils\Collections\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Utils\Protocol\:Code:Slark:src:Slark:Slark.Core:Utils:Protocol:DirectProtocol.cs" />
