--- a/src/Slark/Slark.Server.WebSoket/Slark.Server.WebSoket.csproj
+++ b/src/Slark/Slark.Server.WebSoket/Slark.Server.WebSoket.csproj
@@ -13,4 +13,7 @@
     <ProjectReference Include="..\Slark.Core\Slark.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="SlackHttpServer.cs" />
+  </ItemGroup>
 </Project>
