--- a/src/Slark/Slark.Server.ProtocolAdapter.LeanCloudPlay/Slark.Server.LeanCloud.Play.csproj
+++ b/src/Slark/Slark.Server.ProtocolAdapter.LeanCloudPlay/Slark.Server.LeanCloud.Play.csproj
@@ -11,8 +11,10 @@
   <ItemGroup>
     <Compile Remove="Protocol\Validator\EmptyDataPacket.cs" />
     <Compile Remove="Protocol\Room\MemberDisconnect.cs" />
+    <Compile Remove="Protocol\Hook\IPlayCustomHook.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Protocol\RPC\" />
+    <Folder Include="Protocol\Plugin\" />
   </ItemGroup>
 </Project>
