feat: ready for LeanEngine test.

--- a/src/Slark/TheMessage/TheMessage.csproj
+++ b/src/Slark/TheMessage/TheMessage.csproj
@@ -7,4 +7,7 @@
     <Folder Include="SecretMissions\" />
     <Folder Include="Extensions\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Slark.Server.ProtocolAdapter.LeanCloudPlay\Slark.Server.LeanCloud.Play.csproj" />
+  </ItemGroup>
 </Project>
