feat: server recode.

--- a/src/Slark/Slark.Core/Slark.Core.csproj
+++ b/src/Slark/Slark.Core/Slark.Core.csproj
@@ -14,6 +14,8 @@
     <Folder Include="Utils\Polling\" />
     <Folder Include="Utils\Protocol\" />
     <Folder Include="Utils\Collections\" />
+    <Folder Include="SubClassing\" />
+    <Folder Include="Extensions\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Utils\Protocol\:Code:Slark:src:Slark:Slark.Core:Utils:Protocol:DirectProtocol.cs" />
