--- a/src/Slark/web/web.csproj
+++ b/src/Slark/web/web.csproj
@@ -9,7 +9,7 @@
     <PackageReference Include="Microsoft.AspNetCore.WebSockets.Server" Version="0.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="Microsoft.AspNetCore" Version="2.1.0" />
-    <PackageReference Include="LeanCloud.Engine.Middleware.AspNetCore" Version="2018.7.14.1" />
+    <PackageReference Include="LeanCloud.Engine.Middleware.AspNetCore" Version="2018.7.16.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,6 +18,7 @@
     <ProjectReference Include="..\Slark.Server.WebSoket\Slark.Server.WebSoket.csproj" />
     <ProjectReference Include="..\Slark.Server.LiveBroadcast\Slark.Server.LiveBroadcast.csproj" />
     <ProjectReference Include="..\Landlords.Server\Landlords.Server.csproj" />
+    <ProjectReference Include="..\TheMessage\TheMessage.csproj" />
   </ItemGroup>
 
   <ItemGroup>
