--- a/src/Slark/Slark.Server.ProtocolAdapter.LeanCloudPlay/Slark.Server.LeanCloud.Play.csproj
+++ b/src/Slark/Slark.Server.ProtocolAdapter.LeanCloudPlay/Slark.Server.LeanCloud.Play.csproj
@@ -21,4 +21,7 @@
   <ItemGroup>
     <None Remove="IPlayServerBuilder.config" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+  </ItemGroup>
 </Project>
