feat: notify is better.

--- a/src/Slark/Slark.Server.WebSoket/Slark.Server.WebSoket.csproj
+++ b/src/Slark/Slark.Server.WebSoket/Slark.Server.WebSoket.csproj
@@ -15,5 +15,6 @@
 
   <ItemGroup>
     <Compile Remove="SlackHttpServer.cs" />
+    <Compile Remove="SlarkWebSocketAspNetMiddleware.cs" />
   </ItemGroup>
 </Project>
