--- a/src/Slark/TheMessage/TheMessage.csproj
+++ b/src/Slark/TheMessage/TheMessage.csproj
@@ -9,16 +9,19 @@
     <Folder Include="Spells\" />
     <Folder Include="Utils\" />
     <Folder Include="Shared\" />
+    <Folder Include="SyncObject\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="TMServer.cs" />
     <Compile Remove="Protocols\TMConnectRequest.cs" />
     <Compile Remove="Protocols\TMRoomCreateRequest.cs" />
+    <Compile Remove="Characters\DirectorOfIntelligence.cs" />
+    <Compile Remove="TMDecision.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Slark.Core\Slark.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="LeanCloud.Storage" Version="2018.7.17.6" />
+    <PackageReference Include="LeanCloud.Storage" Version="2018.8.7.1" />
   </ItemGroup>
 </Project>
